[workspace]
resolver = "2"
members = [
    "packages/twitch_api",
    "packages/twitch_types",
    "packages/twitch_oauth2",
    "xtask",
]

[workspace.dependencies]
twitch_api = { version = "0.7.2", path = "packages/twitch_api" }
twitch_oauth2 = { version = "0.15.1", path = "packages/twitch_oauth2" }
twitch_types = { version = "0.4.8", path = "packages/twitch_types" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
url = "2.5.4"
ureq = { version = "2.10.1", default-features = false, features = ["tls"] }

[profile.dev.package.backtrace]
opt-level = 3
